--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,22 +10,24 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
+    "@react-native-masked-view/masked-view": "0.3.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "@supabase/supabase-js": "^2.49.4",
-    "expo": "~52.0.0",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "@supabase/supabase-js": "^2.39.3",
+    "expo": "~50.0.0",
+    "expo-status-bar": "~1.11.1",
+    "react": "18.2.0",
+    "react-native": "0.73.2",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.2.45",
     "typescript": "^5.1.3"
   },
   "private": true
