--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
-    "@react-native-masked-view/masked-view": "0.3.0",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "@supabase/supabase-js": "^2.39.3",
-    "expo": "~50.0.0",
-    "expo-status-bar": "~1.11.1",
+    "expo": "~52.0.0",
+    "expo-status-bar": "~2.0.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-gesture-handler": "~2.14.0",
